--- a/homeserver/src/views/home.ejs
+++ b/homeserver/src/views/home.ejs
@@ -94,12 +94,21 @@
                                                 Room Devices
                                             </div>
                                             <div class="row">
-                                                <div class="col-md-3">
+                                                <div class=".col-6 col-md-4 p-3">
+                                                    <a href="/camera?roomName=<%= page.Home[i].room.roomName%>"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModall">
+                                                        Click to view Camera
+                                                      </button></a>
+                                                      
+                                                </div>
+                                                <div class=".col-6 col-md-4 p-3">
                                                     <img class="img-fluid" onload="imageRefresh(this, 500); "
                                                         src="/camera?roomName=<%= page.Home[i].room.roomName%>"
                                                         alt="Card image cap">
 
                                                 </div>
+                                                <div class=".col-6 col-md-4 p-3"></div>
+                                                
+                                                
                                                 <% for(var j=0; j < page.Home[i].room.devices.length; j++){ %>
                                                     <div class="col-md-6">
                                                         <div class="card">
